--- a/public/index.html
+++ b/public/index.html
@@ -104,6 +104,10 @@
                     <p>Please refer to the <a href="https://developers.line.biz/en/reference/liff/#initialize-liff-app">API reference page</a> for more information.</p>
                 </div>
             </div>
+            <!-- FUNCTION BUTTONS -->
+            <div>
+                <button id="shareMessage">Share Message</button>
+            </div>
         </div>
         <!-- LIFF ID ERROR -->
         <div id="liffIdErrorMessage" class="hidden">
