--- a/public/index.html
+++ b/public/index.html
@@ -136,5 +136,6 @@
         </div>
         <script charset="utf-8" src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
         <script src="liff-starter.js"></script>
+        <script src="shareMsg.js"></script>
     </body>
 </html>
